--- a/index.html
+++ b/index.html
@@ -150,7 +150,21 @@
             <form>
                 <input type="text" name="name" placeholder="Nama" required>
                 <input type="date" name="date" required>
-                <input type="time" name="time" required step="60" min="09:00" max="20:00">
+                <select name="time" required>
+                    <option value="" disabled selected>Pilih Jam</option>
+                    <option value="09:00">09:00</option>
+                    <option value="10:00">10:00</option>
+                    <option value="11:00">11:00</option>
+                    <option value="12:00">12:00</option>
+                    <option value="13:00">13:00</option>
+                    <option value="14:00">14:00</option>
+                    <option value="15:00">15:00</option>
+                    <option value="16:00">16:00</option>
+                    <option value="17:00">17:00</option>
+                    <option value="18:00">18:00</option>
+                    <option value="19:00">19:00</option>
+                    <option value="20:00">20:00</option>
+                </select>
                 <button type="submit" class="btn-primary">Reservasi via WhatsApp</button>
             </form>
             <div class="package-section">
