Add responsive mobile hamburger navigation

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 </head>
 <body>
     <header class="hero">
-        <nav>
+        <nav class="navbar">
             <div class="logo">Le Luxe</div>
-            <ul>
+            <button class="nav-toggle" type="button" aria-label="Buka navigasi" aria-controls="primary-navigation" aria-expanded="false">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <ul class="nav-links" id="primary-navigation" aria-hidden="false">
                 <li><a href="#about">Tentang</a></li>
                 <li><a href="#menu">Menu</a></li>
                 <li><a href="#reservation">Reservasi</a></li>
