--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul class="nav-links">
                 <li><a href="#about">Tentang</a></li>
                 <li><a href="#menu">Menu</a></li>
-                <li><a href="#gallery">Galeri</a></li>
+                <!-- <li><a href="#gallery">Galeri</a></li> -->
                 <li><a href="#reservation">Reservasi</a></li>
             </ul>
         </nav>
@@ -76,6 +76,7 @@
         </div>
     </section>
 
+    <!--
     <section id="gallery" class="gallery">
         <div class="container">
             <h2>Galeri Suasana</h2>
@@ -100,6 +101,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <section id="menu-lengkap" class="menu-lengkap">
         <div class="container">
@@ -221,8 +223,16 @@
         </div>
     </section>
     <footer>
-        <div class="container">
-            <p>&copy; 2025 Le Luxe Restaurant. All rights reserved.</p>
+        <div class="container footer-content">
+            <div class="footer-social">
+                <h4>Social Media Kami</h4>
+                <ul class="footer-social-list">
+                    <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+                    <li><a href="https://www.tiktok.com/" target="_blank" rel="noopener noreferrer">TikTok</a></li>
+                    <li><a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+                </ul>
+            </div>
+            <p class="footer-copy">&copy; 2025 Le Luxe Restaurant. All rights reserved.</p>
         </div>
     </footer>
 </body>
