--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 </head>
 <body>
     <header class="hero">
-        <nav>
+        <nav class="navbar" aria-label="Navigasi utama">
             <div class="logo">Le Luxe</div>
-            <ul>
+            <button class="nav-toggle" aria-label="Buka navigasi" aria-expanded="false">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+            <ul class="nav-links">
                 <li><a href="#about">Tentang</a></li>
                 <li><a href="#menu">Menu</a></li>
+                <!-- <li><a href="#gallery">Galeri</a></li> -->
                 <li><a href="#reservation">Reservasi</a></li>
             </ul>
         </nav>
@@ -69,6 +75,33 @@
             </div>
         </div>
     </section>
+
+    <!--
+    <section id="gallery" class="gallery">
+        <div class="container">
+            <h2>Galeri Suasana</h2>
+            <p class="gallery-subtitle">Jelajahi atmosfer elegan Le Luxe melalui beberapa potret interior dan hidangan unggulan kami.</p>
+            <div class="gallery-grid">
+                <figure class="gallery-card">
+                    <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=1200&q=80" alt="Interior restoran mewah" loading="lazy">
+                    <figcaption>Interior yang hangat dengan pencahayaan dramatis.</figcaption>
+                </figure>
+                <figure class="gallery-card">
+                    <img src="https://images.unsplash.com/photo-1528698827591-e19ccd7bc23d?auto=format&fit=crop&w=1200&q=80" alt="Chef sedang menata hidangan" loading="lazy">
+                    <figcaption>Kreasi chef berkelas dunia yang penuh seni.</figcaption>
+                </figure>
+                <figure class="gallery-card">
+                    <img src="https://images.unsplash.com/photo-1516684732162-798a0062be99?auto=format&fit=crop&w=1200&q=80" alt="Hidangan penutup elegan" loading="lazy">
+                    <figcaption>Pencuci mulut eksklusif dengan sentuhan modern.</figcaption>
+                </figure>
+                <figure class="gallery-card">
+                    <img src="https://images.unsplash.com/photo-1541544741938-0af808871cc0?auto=format&fit=crop&w=1200&q=80" alt="Meja makan dengan dekorasi bunga" loading="lazy">
+                    <figcaption>Pengaturan meja intim untuk momen spesial.</figcaption>
+                </figure>
+            </div>
+        </div>
+    </section>
+    -->
 
     <section id="menu-lengkap" class="menu-lengkap">
         <div class="container">
@@ -150,7 +183,21 @@
             <form>
                 <input type="text" name="name" placeholder="Nama" required>
                 <input type="date" name="date" required>
-                <input type="time" name="time" required step="60" min="09:00" max="20:00">
+                <select name="time" required>
+                    <option value="" disabled selected>Pilih Jam</option>
+                    <option value="09:00">09:00</option>
+                    <option value="10:00">10:00</option>
+                    <option value="11:00">11:00</option>
+                    <option value="12:00">12:00</option>
+                    <option value="13:00">13:00</option>
+                    <option value="14:00">14:00</option>
+                    <option value="15:00">15:00</option>
+                    <option value="16:00">16:00</option>
+                    <option value="17:00">17:00</option>
+                    <option value="18:00">18:00</option>
+                    <option value="19:00">19:00</option>
+                    <option value="20:00">20:00</option>
+                </select>
                 <button type="submit" class="btn-primary">Reservasi via WhatsApp</button>
             </form>
             <div class="package-section">
@@ -176,8 +223,46 @@
         </div>
     </section>
     <footer>
-        <div class="container">
-            <p>&copy; 2025 Le Luxe Restaurant. All rights reserved.</p>
+        <div class="container footer-content">
+            <div class="footer-social">
+                <h4>Social Media Kami</h4>
+                <p class="footer-social-subtitle">Ikuti kami untuk melihat promo, inspirasi dekorasi, dan momen spesial terbaru.</p>
+                <ul class="footer-social-list">
+                    <li>
+                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                            <span class="social-icon" aria-hidden="true">
+                                <svg viewBox="0 0 24 24" role="img" focusable="false">
+                                    <rect x="3" y="3" width="18" height="18" rx="5" ry="5" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round" />
+                                    <circle cx="12" cy="12" r="3.7" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round" />
+                                    <circle cx="17.25" cy="6.75" r="1.2" fill="currentColor" />
+                                </svg>
+                            </span>
+                            <span class="social-label">Instagram</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.tiktok.com/" target="_blank" rel="noopener noreferrer">
+                            <span class="social-icon" aria-hidden="true">
+                                <svg viewBox="0 0 24 24" role="img" focusable="false">
+                                    <path d="M14.5 4.2v9.7c0 2.47-1.73 4-3.82 4-1.65 0-3.18-1.1-3.18-2.98 0-1.43.94-2.6 2.35-2.94v2.21c-.25.18-.42.47-.42.8 0 .66.54 1.15 1.25 1.15.88 0 1.44-.63 1.44-1.68V4.2h2.38c.22 1.56 1.39 2.76 2.9 2.95v2.19c-1.07-.05-2.07-.38-2.9-.93v6.32c0 3.18-2.34 5.27-5.42 5.27-2.97 0-5.38-2.18-5.38-5.12 0-2.58 1.66-4.55 4.13-5.02V7.88C6.41 8.4 4.5 10.76 4.5 13.93 4.5 18 7.54 21 11.67 21c4.4 0 7.33-3 7.33-7.48V7.37c-.96-.33-1.83-.91-2.5-1.69-.72-.84-1.16-1.88-1.3-3.01z" fill="currentColor" />
+                                </svg>
+                            </span>
+                            <span class="social-label">TikTok</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                            <span class="social-icon" aria-hidden="true">
+                                <svg viewBox="0 0 24 24" role="img" focusable="false">
+                                    <path d="M12 2.75c-5.1 0-9.25 4.15-9.25 9.25 0 4.63 3.38 8.48 7.82 9.17v-6.52H8.27v-2.7h2.3V9.87c0-2.27 1.35-3.53 3.41-3.53.99 0 2.03.18 2.03.18v2.24h-1.14c-1.12 0-1.47.69-1.47 1.39v1.67h2.51l-.4 2.7h-2.11v6.52c4.44-.69 7.82-4.54 7.82-9.17 0-5.1-4.15-9.25-9.25-9.25z" fill="currentColor" />
+                                </svg>
+                            </span>
+                            <span class="social-label">Facebook</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <p class="footer-copy">&copy; 2025 Le Luxe Restaurant. All rights reserved.</p>
         </div>
     </footer>
 </body>
