--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <header class="hero">
         <nav class="navbar" aria-label="Navigasi utama">
-            <div class="logo">Le Luxe</div>
+            <div class="logo"><img src="assets\LOGO DDW WHITE.png" alt="my-avatar" /></div>
+            
             <button class="nav-toggle" aria-label="Buka navigasi" aria-expanded="false">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -42,17 +43,17 @@
             <div class="menu-list">
                 <div class="menu-item">
                     <img src="assets/steak.jpg" alt="Steak Premium">
-                    <h3>Steak Premium</h3>
+                    <h3>Gurame Asam Manis</h3>
                     <p>Daging pilihan dengan saus spesial chef.</p>
                 </div>
                 <div class="menu-item">
                     <img src="assets/salmon.jpg" alt="Salmon Truffle">
-                    <h3>Salmon Truffle</h3>
+                    <h3>Sop Kaki Kambing Kuah Susu</h3>
                     <p>Salmon Norwegia dengan saus truffle mewah.</p>
                 </div>
                 <div class="menu-item">
                     <img src="assets/dessert.jpg" alt="Dessert Signature">
-                    <h3>Dessert Signature</h3>
+                    <h3>Ayam Goreng Kampung</h3>
                     <p>Pencuci mulut eksklusif dengan plating artistik.</p>
                 </div>
             </div>
