--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luxury Restaurant</title>
+    <title>Djoglo Djawi Wangon Rumah Makan</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
@@ -11,7 +11,10 @@
 <body>
     <header class="hero">
         <nav class="navbar" aria-label="Navigasi utama">
-            <div class="logo"><img src="assets\LOGO DDW WHITE.png" alt="my-avatar" /></div>
+            <div class="logo" aria-label="Djoglo Djawi Wangon Rumah Makan">
+                <span class="logo-text">Djoglo Djawi Wangon</span>
+                <img src="assets/LOGO%20DDW%20WHITE.png" alt="Logo Djoglo Djawi Wangon" class="logo-image">
+            </div>
             
             <button class="nav-toggle" aria-label="Buka navigasi" aria-expanded="false">
                 <span class="bar"></span>
@@ -26,15 +29,15 @@
             </ul>
         </nav>
         <div class="hero-content">
-            <h1>Selamat Datang di Le Luxe</h1>
-            <p>Pengalaman kuliner mewah dengan sentuhan estetika modern.</p>
+            <h1>Selamat Datang di Djoglo Djawi Wangon</h1>
+            <p>Rumah Makan bernuansa tradisional dengan cita rasa autentik dan pelayanan hangat.</p>
             <a href="#reservation" class="btn-primary">Reservasi Sekarang</a>
         </div>
     </header>
     <section id="about" class="about">
         <div class="container">
             <h2>Tentang Kami</h2>
-            <p>Le Luxe menghadirkan suasana elegan dan menu eksklusif yang memanjakan lidah Anda. Nikmati hidangan terbaik dari chef berkelas dunia dalam atmosfer yang mewah dan nyaman.</p>
+            <p>Djoglo Djawi Wangon menghadirkan suasana hangat khas Jawa dengan menu eksklusif yang memanjakan lidah Anda. Nikmati hidangan terbaik dari para chef kami dalam atmosfer Rumah Makan yang elegan dan nyaman.</p>
         </div>
     </section>
     <section id="menu" class="menu">
@@ -42,21 +45,22 @@
             <h2>Menu Spesial</h2>
             <div class="menu-list">
                 <div class="menu-item">
-                    <img src="assets/steak.jpg" alt="Steak Premium">
+                    <img src="https://images.unsplash.com/photo-1612872087720-bb876e8ebb06?auto=format&amp;fit=crop&amp;w=800&amp;q=80" alt="Gurame asam manis dengan saus merah menggugah selera">
                     <h3>Gurame Asam Manis</h3>
-                    <p>Daging pilihan dengan saus spesial chef.</p>
+                    <p>Ikan gurame segar dengan saus asam manis khas Djoglo Djawi Wangon.</p>
                 </div>
                 <div class="menu-item">
-                    <img src="assets/salmon.jpg" alt="Salmon Truffle">
+                    <img src="https://images.unsplash.com/photo-1589302168068-964664d93dc0?auto=format&amp;fit=crop&amp;w=800&amp;q=80" alt="Semangkuk sop kaki kambing kuah susu hangat">
                     <h3>Sop Kaki Kambing Kuah Susu</h3>
-                    <p>Salmon Norwegia dengan saus truffle mewah.</p>
+                    <p>Sop kaki kambing dengan kuah susu gurih dan rempah pilihan.</p>
                 </div>
                 <div class="menu-item">
-                    <img src="assets/dessert.jpg" alt="Dessert Signature">
+                    <img src="https://images.unsplash.com/photo-1604908177071-95591a1969bd?auto=format&amp;fit=crop&amp;w=800&amp;q=80" alt="Ayam goreng kampung dengan sambal tradisional">
                     <h3>Ayam Goreng Kampung</h3>
-                    <p>Pencuci mulut eksklusif dengan plating artistik.</p>
+                    <p>Ayam kampung goreng renyah ditemani sambal trasi spesial rumah makan.</p>
                 </div>
             </div>
+            <!--
             <div class="menu-list" style="margin-top:2.5rem;">
                 <div class="menu-item">
                     <img src="assets/pasta.jpg" alt="Pasta Truffle">
@@ -74,6 +78,7 @@
                     <p>Minuman segar racikan bartender terbaik kami.</p>
                 </div>
             </div>
+            -->
         </div>
     </section>
 
@@ -81,7 +86,7 @@
     <section id="gallery" class="gallery">
         <div class="container">
             <h2>Galeri Suasana</h2>
-            <p class="gallery-subtitle">Jelajahi atmosfer elegan Le Luxe melalui beberapa potret interior dan hidangan unggulan kami.</p>
+            <p class="gallery-subtitle">Jelajahi atmosfer elegan Djoglo Djawi Wangon melalui beberapa potret interior dan hidangan unggulan kami.</p>
             <div class="gallery-grid">
                 <figure class="gallery-card">
                     <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=1200&q=80" alt="Interior restoran mewah" loading="lazy">
@@ -264,7 +269,7 @@
 
                 </ul>
             </div>
-            <p class="footer-copy">&copy; 2025 Le Luxe Restaurant. All rights reserved.</p>
+            <p class="footer-copy">&copy; 2025 Djoglo Djawi Wangon Rumah Makan. All rights reserved.</p>
         </div>
     </footer>
 </body>
