Make navigation fixed and add scrollable specials

--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
                     <h3>Ayam Goreng Kampung</h3>
                     <p>Ayam kampung goreng renyah ditemani sambal trasi spesial rumah makan.</p>
                 </div>
+                <div class="menu-item">
+                    <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&amp;fit=crop&amp;w=800&amp;q=80" alt="Ilustrasi sajian sate signature Djoglo Djawi Wangon">
+                    <h3>Sate Maranggi Signature</h3>
+                    <p>Sate daging sapi maranggi berbumbu manis pedas dengan sambal kecap dan lalapan segar.</p>
+                </div>
+                <div class="menu-item">
+                    <img src="https://images.unsplash.com/photo-1546069901-eacef0df6022?auto=format&amp;fit=crop&amp;w=800&amp;q=80" alt="Ilustrasi rawon sapi premium dengan penyajian modern">
+                    <h3>Rawon Sapi Premium</h3>
+                    <p>Kuah kluwek pekat dengan daging sapi empuk, telur asin, dan taburan bawang goreng.</p>
+                </div>
             </div>
             <!--
             <div class="menu-list" style="margin-top:2.5rem;">
