Add location section with map and GrabFood link

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="#about">Tentang</a></li>
                 <li><a href="#menu">Menu</a></li>
                 <!-- <li><a href="#gallery">Galeri</a></li> -->
+                <li><a href="#location">Lokasi</a></li>
                 <li><a href="#reservation">Reservasi</a></li>
         </ul>
     </nav>
@@ -190,6 +191,33 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="location" class="location">
+        <div class="container location-grid">
+            <div class="location-info">
+                <h2>Lokasi & Arah</h2>
+                <p>Temukan Djoglo Djawi Wangon di pusat Wangon, Banyumas. Kami berada di jalur utama sehingga mudah dijangkau kendaraan pribadi maupun transportasi umum.</p>
+                <address class="location-address">
+                    Jl. Raya Wangon No. 123, Wangon, Banyumas, Jawa Tengah 53176
+                </address>
+                <div class="location-actions">
+                    <a class="btn-primary" href="https://maps.google.com/?q=-7.533423,109.056968" target="_blank"
+                        rel="noopener noreferrer">
+                        Buka di Google Maps
+                    </a>
+                    <a class="btn-secondary" href="https://food.grab.com/id/id/restaurants?search=Djoglo%20Djawi%20Wangon" target="_blank"
+                        rel="noopener noreferrer">
+                        Pesan via GrabFood
+                    </a>
+                </div>
+                <p class="grabfood-note">Tautan GrabFood akan membuka aplikasi Grab jika sudah terpasang pada perangkat Anda.</p>
+            </div>
+            <div class="location-map">
+                <iframe title="Peta lokasi Djoglo Djawi Wangon" loading="lazy"
+                    src="https://maps.google.com/maps?q=-7.533423,109.056968&amp;z=17&amp;hl=id&amp;output=embed"
+                    allowfullscreen referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
