--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     Jl. Raya Wangon No. 123, Wangon, Banyumas, Jawa Tengah 53176
                 </address>
                 <div class="location-actions">
-                    <a class="btn-primary" href="https://maps.google.com/?q=-7.533423,109.056968" target="_blank"
+                    <a class="btn-primary" href="https://maps.app.goo.gl/ZKfjk5X8J7oDK9BR8" target="_blank"
                         rel="noopener noreferrer">
                         Buka di Google Maps
                     </a>
@@ -215,9 +215,15 @@
                 <p class="grabfood-note">Tautan GrabFood akan membuka aplikasi Grab jika sudah terpasang pada perangkat Anda.</p>
             </div>
             <div class="location-map">
-                <iframe title="Peta lokasi Djoglo Djawi Wangon" loading="lazy"
-                    src="https://maps.google.com/maps?q=-7.533423,109.056968&amp;z=17&amp;hl=id&amp;output=embed"
-                    allowfullscreen referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    title="Peta lokasi Djoglo Djawi Wangon"
+                    loading="lazy"
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3955.608978843106!2d109.0568776!3d-7.5083451!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e656510297eec4b%3A0x4c4a11a1167a4c09!2sDjoglo%20Djawi%20Wangon!5e0!3m2!1sid!2sid!4v1758443052327!5m2!1sid!2sid"
+                    allowfullscreen
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+
             </div>
         </div>
     </section>
@@ -290,7 +296,7 @@
                         <a href="https://www.tiktok.com/" target="_blank" rel="noopener noreferrer">
                             <span class="social-icon" aria-hidden="true">
                                 <svg viewBox="0 0 24 24" role="img" focusable="false">
-                                    <path d="M14.5 4.2v9.7c0 2.47-1.73 4-3.82 4-1.65 0-3.18-1.1-3.18-2.98 0-1.43.94-2.6 2.35-2.94v2.21c-.25.18-.42.47-.42.8 0 .66.54 1.15 1.25 1.15.88 0 1.44-.63 1.44-1.68V4.2h2.38c.22 1.56 1.39 2.76 2.9 2.95v2.19c-1.07-.05-2.07-.38-2.9-.93v6.32c0 3.18-2.34 5.27-5.42 5.27-2.97 0-5.38-2.18-5.38-5.12 0-2.58 1.66-4.55 4.13-5.02V7.88C6.41 8.4 4.5 10.76 4.5 13.93 4.5 18 7.54 21 11.67 21c4.4 0 7.33-3 7.33-7.48V7.37c-.96-.33-1.83-.91-2.5-1.69-.72-.84-1.16-1.88-1.3-3.01z" fill="currentColor" />
+                                    <path d="M16.8217 5.1344C16.0886 4.29394 15.6479 3.19805 15.6479 2H14.7293M16.8217 5.1344C17.4898 5.90063 18.3944 6.45788 19.4245 6.67608C19.7446 6.74574 20.0786 6.78293 20.4266 6.78293V10.2191C18.645 10.2191 16.9932 9.64801 15.6477 8.68211V15.6707C15.6477 19.1627 12.8082 22 9.32386 22C7.50043 22 5.85334 21.2198 4.69806 19.98C3.64486 18.847 2.99994 17.3331 2.99994 15.6707C2.99994 12.2298 5.75592 9.42509 9.17073 9.35079M16.8217 5.1344C16.8039 5.12276 16.7861 5.11101 16.7684 5.09914M6.9855 17.3517C6.64217 16.8781 6.43802 16.2977 6.43802 15.6661C6.43802 14.0734 7.73249 12.7778 9.32394 12.7778C9.62087 12.7778 9.9085 12.8288 10.1776 12.9124V9.40192C9.89921 9.36473 9.61622 9.34149 9.32394 9.34149C9.27287 9.34149 8.86177 9.36884 8.81073 9.36884M14.7244 2H12.2097L12.2051 15.7775C12.1494 17.3192 10.8781 18.5591 9.32386 18.5591C8.35878 18.5591 7.50971 18.0808 6.98079 17.3564" stroke="#e0b973" stroke-linejoin="round"/> </g>
                                 </svg>
                             </span>
                             <span class="social-label">TikTok</span>
