--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Djoglo Djawi Wangon Rumah Makan</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar" aria-label="Navigasi utama">
