update gambar product

--- a/index.html
+++ b/index.html
@@ -46,28 +46,33 @@
             <h2>Menu Spesial</h2>
             <div class="menu-list">
                 <div class="menu-item">
-                    <img src="https://images.unsplash.com/photo-1612872087720-bb876e8ebb06?auto=format&amp;fit=crop&amp;w=800&amp;q=80" alt="Gurame asam manis dengan saus merah menggugah selera">
+                    <img src="assets\grameasammanis.png" alt="Gurame asam manis dengan saus merah menggugah selera">
                     <h3>Gurame Asam Manis</h3>
                     <p>Ikan gurame segar dengan saus asam manis khas Djoglo Djawi Wangon.</p>
                 </div>
                 <div class="menu-item">
-                    <img src="https://images.unsplash.com/photo-1589302168068-964664d93dc0?auto=format&amp;fit=crop&amp;w=800&amp;q=80" alt="Semangkuk sop kaki kambing kuah susu hangat">
+                    <img src="assets\sopkakikambingkuahsusu.png" alt="Semangkuk sop kaki kambing kuah susu hangat">
                     <h3>Sop Kaki Kambing Kuah Susu</h3>
                     <p>Sop kaki kambing dengan kuah susu gurih dan rempah pilihan.</p>
                 </div>
                 <div class="menu-item">
-                    <img src="https://images.unsplash.com/photo-1604908177071-95591a1969bd?auto=format&amp;fit=crop&amp;w=800&amp;q=80" alt="Ayam goreng kampung dengan sambal tradisional">
+                    <img src="assets\ayamkampunggoreng.png" alt="Ayam goreng kampung dengan sambal tradisional">
                     <h3>Ayam Goreng Kampung</h3>
                     <p>Ayam kampung goreng renyah ditemani sambal trasi spesial rumah makan.</p>
                 </div>
                 <div class="menu-item">
-                    <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&amp;fit=crop&amp;w=800&amp;q=80" alt="Ilustrasi sajian sate signature Djoglo Djawi Wangon">
-                    <h3>Sate Maranggi Signature</h3>
+                    <img src="assets\strawberryfrost.png" alt="Ilustrasi sajian sate signature Djoglo Djawi Wangon">
+                    <h3>Strawberry Frost</h3>
                     <p>Sate daging sapi maranggi berbumbu manis pedas dengan sambal kecap dan lalapan segar.</p>
                 </div>
                 <div class="menu-item">
-                    <img src="https://images.unsplash.com/photo-1546069901-eacef0df6022?auto=format&amp;fit=crop&amp;w=800&amp;q=80" alt="Ilustrasi rawon sapi premium dengan penyajian modern">
-                    <h3>Rawon Sapi Premium</h3>
+                    <img src="assets\strawberrysquash.png" alt="Ilustrasi rawon sapi premium dengan penyajian modern">
+                    <h3>Strawberry Squash</h3>
+                    <p>Kuah kluwek pekat dengan daging sapi empuk, telur asin, dan taburan bawang goreng.</p>
+                </div>
+                <div class="menu-item">
+                    <img src="assets\lycheyakult.png" alt="Ilustrasi rawon sapi premium dengan penyajian modern">
+                    <h3>Lychee Yakult</h3>
                     <p>Kuah kluwek pekat dengan daging sapi empuk, telur asin, dan taburan bawang goreng.</p>
                 </div>
             </div>
