--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <div class="hero-content">
             <p class="hero-kicker">Selamat Datang di</p>
             <h1>Djoglo Djawi Wangon</h1>
-            <p>Rumah Makan bernuansa tradisional dengan cita rasa autentik dan pelayanan hangat.</p>
+            <p>Rumah Makan Bangunan Nostalgia, Rasa Tidak Ada Tandingannya.</p>
             <a href="#reservation" class="btn-primary">Reservasi Sekarang</a>
         </div>
     </header>
     <section id="about" class="about">
         <div class="container">
             <h2>Tentang Kami</h2>
-            <p>Djoglo Djawi Wangon menghadirkan suasana hangat khas Jawa dengan menu eksklusif yang memanjakan lidah Anda. Nikmati hidangan terbaik dari para chef kami dalam atmosfer Rumah Makan yang elegan dan nyaman.</p>
+            <p>Djoglo Djawi Wangon menghadirkan suasana hangat khas Jawa, pemandangan asri tepi sawah, dan area makan yang cocok untuk berbagai kebutuhan, dengan menu yang memanjakan lidah Anda.</p>
         </div>
     </section>
     <section id="menu" class="menu">
@@ -48,25 +48,6 @@
             <div class="menu-list" data-menu-specials aria-live="polite">
                 <p class="menu-loading">Memuat menu spesial...</p>
             </div>
-            <!--
-            <div class="menu-list" style="margin-top:2.5rem;">
-                <div class="menu-item">
-                    <img src="assets/pasta.jpg" alt="Pasta Truffle">
-                    <h3>Pasta Truffle</h3>
-                    <p>Pasta homemade dengan saus truffle dan parmesan.</p>
-                </div>
-                <div class="menu-item">
-                    <img src="assets/soup.jpg" alt="Soup Bouillabaisse">
-                    <h3>Soup Bouillabaisse</h3>
-                    <p>Sup seafood klasik Perancis dengan aroma saffron.</p>
-                </div>
-                <div class="menu-item">
-                    <img src="assets/mocktail.jpg" alt="Mocktail Signature">
-                    <h3>Mocktail Signature</h3>
-                    <p>Minuman segar racikan bartender terbaik kami.</p>
-                </div>
-            </div>
-            -->
         </div>
     </section>
 
@@ -109,16 +90,16 @@
         <div class="container location-grid">
             <div class="location-info">
                 <h2>Lokasi & Arah</h2>
-                <p>Temukan Djoglo Djawi Wangon di pusat Wangon, Banyumas. Kami berada di jalur utama sehingga mudah dijangkau kendaraan pribadi maupun transportasi umum.</p>
+                <p>Temukan Djoglo Djawi Wangon di Wangon, Banyumas. Kami berada di jalur yang mudah dijangkau kendaraan pribadi maupun transportasi umum.</p>
                 <address class="location-address">
-                    Jl. Raya Wangon No. 123, Wangon, Banyumas, Jawa Tengah 53176
+                    Jl. Raya Utara, Ledar, Banteran, Kec. Wangon, Kabupaten Banyumas, Jawa Tengah 53176
                 </address>
                 <div class="location-actions">
                     <a class="btn-primary" href="https://maps.app.goo.gl/ZKfjk5X8J7oDK9BR8" target="_blank"
                         rel="noopener noreferrer">
                         Buka di Google Maps
                     </a>
-                    <a class="btn-secondary" href="https://food.grab.com/id/id/restaurants?search=Djoglo%20Djawi%20Wangon" target="_blank"
+                    <a class="btn-secondary" href="https://r.grab.com/g/6-20250830_191021_c020e55546d34be193f0ce2715586b49_MEXMPS-6-C7J1PGLUAXDACN" target="_blank"
                         rel="noopener noreferrer">
                         Pesan via GrabFood
                     </a>
@@ -176,11 +157,11 @@
                         <div class="package-desc">Rayakan momen tunangan dengan suasana romantis, menu pilihan, dan dekorasi elegan.</div>
                         <button class="wa-action btn-primary">Tanya Paket Tunangan</button>
                     </div>
-                    <div class="package-card">
+                    <!--<div class="package-card">
                         <div class="package-title">Birthday</div>
                         <div class="package-desc">Paket ulang tahun dengan tema aesthetic, kue custom, dan hiburan spesial.</div>
                         <button class="wa-action btn-primary">Tanya Paket Birthday</button>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
@@ -189,7 +170,7 @@
         <div class="container footer-content">
             <div class="footer-social">
                 <h4>Social Media Kami</h4>
-                <p class="footer-social-subtitle">Ikuti kami untuk melihat promo, inspirasi dekorasi, dan momen spesial terbaru.</p>
+                <p class="footer-social-subtitle">Ikuti kami untuk melihat promo terupdate,dan momen spesial terbaru.</p>
                 <ul class="footer-social-list">
                     <li>
                         <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
@@ -207,7 +188,7 @@
                         <a href="https://www.tiktok.com/" target="_blank" rel="noopener noreferrer">
                             <span class="social-icon" aria-hidden="true">
                                 <svg viewBox="0 0 24 24" role="img" focusable="false">
-                                    <path d="M16.8217 5.1344C16.0886 4.29394 15.6479 3.19805 15.6479 2H14.7293M16.8217 5.1344C17.4898 5.90063 18.3944 6.45788 19.4245 6.67608C19.7446 6.74574 20.0786 6.78293 20.4266 6.78293V10.2191C18.645 10.2191 16.9932 9.64801 15.6477 8.68211V15.6707C15.6477 19.1627 12.8082 22 9.32386 22C7.50043 22 5.85334 21.2198 4.69806 19.98C3.64486 18.847 2.99994 17.3331 2.99994 15.6707C2.99994 12.2298 5.75592 9.42509 9.17073 9.35079M16.8217 5.1344C16.8039 5.12276 16.7861 5.11101 16.7684 5.09914M6.9855 17.3517C6.64217 16.8781 6.43802 16.2977 6.43802 15.6661C6.43802 14.0734 7.73249 12.7778 9.32394 12.7778C9.62087 12.7778 9.9085 12.8288 10.1776 12.9124V9.40192C9.89921 9.36473 9.61622 9.34149 9.32394 9.34149C9.27287 9.34149 8.86177 9.36884 8.81073 9.36884M14.7244 2H12.2097L12.2051 15.7775C12.1494 17.3192 10.8781 18.5591 9.32386 18.5591C8.35878 18.5591 7.50971 18.0808 6.98079 17.3564" stroke="#e0b973" stroke-linejoin="round"/> </g>
+                                    <path d="M16.8217 5.1344C16.0886 4.29394 15.6479 3.19805 15.6479 2H14.7293M16.8217 5.1344C17.4898 5.90063 18.3944 6.45788 19.4245 6.67608C19.7446 6.74574 20.0786 6.78293 20.4266 6.78293V10.2191C18.645 10.2191 16.9932 9.64801 15.6477 8.68211V15.6707C15.6477 19.1627 12.8082 22 9.32386 22C7..50043 22 5.85334 21.2198 4.69806 19.98C3.64486 18.847 2.99994 17.3331 2.99994 15.6707C2.99994 12.2298 5.75592 9.42509 9.17073 9.35079M16.8217 5.1344C16.8039 5.12276 16.7861 5.11101 16.7684 5.09914M6.9855 17.3517C6.64217 16.8781 6.43802 16.2977 6.43802 15.6661C6.43802 14.0734 7.73249 12.7778 9.32394 12.7778C9.62087 12.7778 9.9085 12.8288 10.1776 12.9124V9.40192C9.89921 9.36473 9.61622 9.34149 9.32394 9.34149C9.27287 9.34149 8.86177 9.36884 8.81073 9.36884M14.7244 2H12.2097L12.2051 15.7775C12.1494 17.3192 10.8781 18.5591 9.32386 18.5591C8.35878 18.5591 7.50971 18.0808 6.98079 17.3564" stroke="#e0b973" stroke-linejoin="round"/> </g>
                                 </svg>
                             </span>
                             <span class="social-label">TikTok</span>
@@ -226,7 +207,7 @@
 
                 </ul>
             </div>
-            <p class="footer-copy">&copy; 2025 Djoglo Djawi Wangon Rumah Makan. All rights reserved.</p>
+            <p class="footer-copy">Djoglo Djawi Wangon Rumah Makan &copy; 2025 All rights reserved.</p>
         </div>
     </footer>
 </body>
