Improve SEO metadata and add favicon

--- a/index.html
+++ b/index.html
@@ -2,11 +2,83 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Djoglo Djawi Wangon Rumah Makan</title>
+    <meta name="description" content="Djoglo Djawi Wangon adalah rumah makan bergaya joglo di Wangon, Banyumas dengan pemandangan sawah, menu khas Jawa, serta layanan reservasi untuk wedding dan acara bisnis.">
+    <meta name="keywords" content="Djoglo Djawi Wangon, rumah makan Jawa Wangon, restoran tradisional Banyumas, venue wedding Banyumas, reservasi rumah makan">
+    <meta name="author" content="Djoglo Djawi Wangon">
+    <meta name="publisher" content="Djoglo Djawi Wangon">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="theme-color" content="#181818">
+    <meta name="msapplication-TileColor" content="#181818">
+    <meta name="geo.region" content="ID-JT">
+    <meta name="geo.placename" content="Wangon">
+    <meta name="geo.position" content="-7.5083451;109.0568776">
+    <meta name="ICBM" content="-7.5083451, 109.0568776">
+    <link rel="canonical" href="https://djoglodjawiwangon.my.id/">
+    <link rel="alternate" href="https://djoglodjawiwangon.my.id/" hreflang="id">
+    <link rel="icon" href="logo.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="logo.ico">
+    <meta property="og:locale" content="id_ID">
+    <meta property="og:type" content="restaurant">
+    <meta property="og:title" content="Djoglo Djawi Wangon Rumah Makan">
+    <meta property="og:description" content="Djoglo Djawi Wangon adalah rumah makan bergaya joglo di Wangon, Banyumas dengan pemandangan sawah, menu khas Jawa, serta layanan reservasi untuk wedding dan acara bisnis.">
+    <meta property="og:url" content="https://djoglodjawiwangon.my.id/">
+    <meta property="og:site_name" content="Djoglo Djawi Wangon Rumah Makan">
+    <meta property="og:image" content="https://djoglodjawiwangon.my.id/assets/LOGO%20DDW%20WHITE.png">
+    <meta property="og:image:alt" content="Logo Djoglo Djawi Wangon">
+    <meta property="og:image:type" content="image/png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Djoglo Djawi Wangon Rumah Makan">
+    <meta name="twitter:description" content="Djoglo Djawi Wangon adalah rumah makan bergaya joglo di Wangon, Banyumas dengan pemandangan sawah, menu khas Jawa, serta layanan reservasi untuk wedding dan acara bisnis.">
+    <meta name="twitter:url" content="https://djoglodjawiwangon.my.id/">
+    <meta name="twitter:image" content="https://djoglodjawiwangon.my.id/assets/LOGO%20DDW%20WHITE.png">
+    <meta name="twitter:image:alt" content="Logo Djoglo Djawi Wangon">
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link rel="dns-prefetch" href="//fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Restaurant",
+            "@id": "https://djoglodjawiwangon.my.id/#restaurant",
+            "name": "Djoglo Djawi Wangon",
+            "description": "Rumah makan bergaya joglo dengan menu khas Jawa dan layanan reservasi untuk berbagai acara di Wangon, Banyumas.",
+            "url": "https://djoglodjawiwangon.my.id/",
+            "image": "https://djoglodjawiwangon.my.id/assets/LOGO%20DDW%20WHITE.png",
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "Jl. Raya Utara, Ledar, Banteran",
+                "addressLocality": "Wangon",
+                "addressRegion": "Jawa Tengah",
+                "postalCode": "53176",
+                "addressCountry": "ID"
+            },
+            "geo": {
+                "@type": "GeoCoordinates",
+                "latitude": -7.5083451,
+                "longitude": 109.0568776
+            },
+            "servesCuisine": [
+                "Masakan Jawa",
+                "Masakan Nusantara"
+            ],
+            "sameAs": [
+                "https://www.instagram.com/ddwrumahmakan",
+                "https://www.tiktok.com/@ddwrumahmakan?_t=ZS-8zwBWVCofZP&_r=1",
+                "https://www.facebook.com/share/1CjXdda9st/"
+            ],
+            "hasMenu": "https://djoglodjawiwangon.my.id/#menu-lengkap",
+            "acceptsReservations": true
+        }
+    </script>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <nav class="navbar" aria-label="Navigasi utama">
