ganti deskripsi paket acara

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Djoglo Djawi Wangon Rumah Makan</title>
-    <meta name="description" content="Djoglo Djawi Wangon adalah rumah makan bergaya joglo di Wangon, Banyumas dengan pemandangan sawah, menu khas Jawa, serta layanan reservasi untuk wedding dan acara bisnis.">
+    <meta name="description" content="Djoglo Djawi Wangon adalah rumah makan bergaya joglo di Wangon, Banyumas dengan pemandangan sawah, menu khas Jawa, serta layanan reservasi untuk wedding dan acara lainya.">
     <meta name="keywords" content="Djoglo Djawi Wangon, rumah makan Jawa Wangon, restoran tradisional Banyumas, venue wedding Banyumas, reservasi rumah makan">
     <meta name="author" content="Djoglo Djawi Wangon">
     <meta name="publisher" content="Djoglo Djawi Wangon">
@@ -25,7 +25,7 @@
     <meta property="og:locale" content="id_ID">
     <meta property="og:type" content="restaurant">
     <meta property="og:title" content="Djoglo Djawi Wangon Rumah Makan">
-    <meta property="og:description" content="Djoglo Djawi Wangon adalah rumah makan bergaya joglo di Wangon, Banyumas dengan pemandangan sawah, menu khas Jawa, serta layanan reservasi untuk wedding dan acara bisnis.">
+    <meta property="og:description" content="Djoglo Djawi Wangon adalah rumah makan bergaya joglo di Wangon, Banyumas dengan pemandangan sawah, menu khas Jawa, serta layanan reservasi untuk wedding dan acara lainya.">
     <meta property="og:url" content="https://djoglodjawiwangon.my.id/">
     <meta property="og:site_name" content="Djoglo Djawi Wangon Rumah Makan">
     <meta property="og:image" content="https://djoglodjawiwangon.my.id/assets/LOGO%20DDW%20WHITE.png">
@@ -33,7 +33,7 @@
     <meta property="og:image:type" content="image/png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Djoglo Djawi Wangon Rumah Makan">
-    <meta name="twitter:description" content="Djoglo Djawi Wangon adalah rumah makan bergaya joglo di Wangon, Banyumas dengan pemandangan sawah, menu khas Jawa, serta layanan reservasi untuk wedding dan acara bisnis.">
+    <meta name="twitter:description" content="Djoglo Djawi Wangon adalah rumah makan bergaya joglo di Wangon, Banyumas dengan pemandangan sawah, menu khas Jawa, serta layanan reservasi untuk wedding dan acara lainya.">
     <meta name="twitter:url" content="https://djoglodjawiwangon.my.id/">
     <meta name="twitter:image" content="https://djoglodjawiwangon.my.id/assets/LOGO%20DDW%20WHITE.png">
     <meta name="twitter:image:alt" content="Logo Djoglo Djawi Wangon">
@@ -74,7 +74,7 @@
                 "https://www.tiktok.com/@ddwrumahmakan?_t=ZS-8zwBWVCofZP&_r=1",
                 "https://www.facebook.com/share/1CjXdda9st/"
             ],
-            "hasMenu": "https://djoglodjawiwangon.my.id/#menu-lengkap",
+            "hasMenu": "https://djoglodjawiwangon.my.id/#menu",
             "acceptsReservations": true
         }
     </script>
@@ -221,12 +221,12 @@
                 <div class="package-list">
                     <div class="package-card">
                         <div class="package-title">Wedding</div>
-                        <div class="package-desc">Paket pernikahan mewah dengan dekorasi eksklusif, menu spesial, dan layanan premium untuk hari istimewa Anda.</div>
+                        <div class="package-desc">Rayakan hari bahagia Anda bersama orang-orang tercinta dengan paket pernikahan lengkap yang kami siapkan khusus untuk Anda.</div>
                         <button class="wa-action btn-primary">Tanya Paket Wedding</button>
                     </div>
                     <div class="package-card">
                         <div class="package-title">Tunangan</div>
-                        <div class="package-desc">Rayakan momen tunangan dengan suasana romantis, menu pilihan, dan dekorasi elegan.</div>
+                        <div class="package-desc">Rayakan momen tunangan Anda bersama keluarga dan sahabat terdekat dengan paket lengkap yang kami siapkan khusus untuk Anda.</div>
                         <button class="wa-action btn-primary">Tanya Paket Tunangan</button>
                     </div>
                     <!--<div class="package-card">
